# dawn-single-lib

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  dawn.pc.in  dawnConfig.cmake.in  dawnTargets.cmake.in
.github/workflows/: build.yml  makefile.yml
cmake/: FetchDawn.cmake
